--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,12 @@
+root = true
+
+[*.cpp]
+charset = utf-8
+indent_style = space
+indent_size = 4
+
 [*]
+end_of_line = lf
 cpp_indent_braces=false
 cpp_indent_multi_line_relative_to=innermost_parenthesis
 cpp_indent_within_parentheses=indent
